--- a/chat3.html
+++ b/chat3.html
@@ -52,11 +52,42 @@
   <div class="timeline" id="timeline"></div>
 
   <script>
+    const nascimentos = [
+      {
+        nome: "Jonatas",
+        data: new Date("1989-06-28 00:00:00")
+      },
+      {
+        nome: "Hellen",
+        data: new Date("1990-10-05 00:00:00")
+      },
+      {
+        nome: "Manu",
+        data: new Date("2017-03-05 00:00:00")
+      },
+      {
+        nome: "Levi",
+        data: new Date("2019-09-17 00:00:00")
+      },
+      {
+        nome: "Matias",
+        data: new Date("2022-10-29 00:00:00")
+      }
+    ];
+
+    nascimentos.forEach(element => {
+      element.ano = element.data.getFullYear();
+      element.diaDoAno = Math.floor((element.data - new Date(element.ano, 0, 1, 0, 0, 0)) / (1000 * 60 * 60 * 24));
+      //element.diaDoAno = element.data - new Date()
+      element.diaRatio = Math.round(element.diaDoAno / 365 * 100);
+    });
+
+    console.log(nascimentos);
     const nascimento = new Date("1989-06-28");
     const nascimentoAno = nascimento.getFullYear();
 
     const startYear = 1989;
-    const endYear = 2030;
+    const endYear = 2100;
     const yearHeight = 100; // altura de cada ano em px
 
     // Posição do aniversário em relação ao ano
@@ -76,6 +107,19 @@
       yearBlock.appendChild(label);
 
       timeline.appendChild(yearBlock);
+      let index = 0;
+      nascimentos.forEach(n => {
+        if(n.ano <= year) {
+          const bar = document.createElement("div");
+          bar.className = "age-bar";
+          bar.style.top = `${n.diaRatio}px`;
+          bar.style.height = `${yearHeight-3}px`;
+          bar.textContent = year - n.ano + " anos";
+          bar.style.left = `${index * 70 + 50}px`;
+          yearBlock.append(bar);
+        }
+        index++;
+      });
     }
 
     // Agora adicionamos as barras por fora dos blocos
@@ -86,14 +130,14 @@
       const bar = document.createElement("div");
       bar.className = "age-bar";
 
-      const startY = (nascimentoAno + i - startYear + birthdayRatio) * yearHeight;
+      const startY = Math.round((nascimentoAno + i - startYear + birthdayRatio) * yearHeight);
       const barHeight = yearHeight; // sempre 1 ano
 
       bar.style.top = `${startY}px`;
       bar.style.height = `${barHeight-3}px`;
       bar.textContent = `${i} ${i === 1 ? "ano" : "anos"}`;
 
-      timeline.appendChild(bar);
+      //timeline.appendChild(bar);
     }
   </script>
 </body>
